# serial-notifier-web

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  config.py  db.py  db_datacalss.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  gunicorn_conf.py  logger.py  main.py  middleware.py  models.py  pyproject.toml  scheduler.py
alembic/: env.py
alembic/versions/: 67cf23606710_add_constraint_unique_episode_for_user_.py  6fc9fa4a6ba3_add_user_model.py  8fa487579879_setup_param_nullable.py  e947ed61465e_add_not_null.py
auth/: exceptions.py  routes.py  schemas.py  security.py  service.py  views.py
auth/business_logic/: account.py
common/: database.py  exceptions.py  jwt.py  security.py  validate.py
common/marshmallow/: fields.py
common/rest_api/: error.py  exceptions.py
conf_files/nginx/: default.conf
libs/serial-notifier-api/: pyproject.toml
libs/serial-notifier-api/serial_notifier_api/: api.py
libs/serial-notifier-schema/: pyproject.toml
libs/serial-notifier-schema/serial_notifier_schema/: auth.py
scripts/: load-pg-dump.sh
serial_notifier/: .env.example  .flake8  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
serial_notifier/alembic/: env.py
serial_notifier/alembic/versions/: 63678899e054_add_table_source_info.py  a3600a14efae_add_constraint_unique_episode.py  b8c8e0c4f445_add_table_for_store_serial.py  f87d27f7d9f8_add_telegram_acc.py
serial_notifier/conf_files/docker/: Dockerfile  base.Dockerfile
serial_notifier/migrations/: env.py
serial_notifier/migrations/versions/: 63678899e054_add_table_source_info.py  6fc9fa4a6ba3_add_user_model.py  8fa487579879_setup_param_nullable.py  a3600a14efae_add_constraint_unique_episode.py  b8c8e0c4f445_add_table_for_store_serial.py  e947ed61465e_add_not_null.py  f87d27f7d9f8_add_telegram_acc.py
serial_notifier/scripts/: create-pg-dump.sh
serial_notifier/src/: config.py  db.py  logger.py  main.py  models.py  scheduler.py
serial_notifier/src/apps/auth/: exceptions.py  routes.py  security.py  service.py  views.py
serial_notifier/src/apps/common/: asyncom.py  database.py  schemas.py
serial_notifier/src/apps/tv_show/: routes.py  schemas.py  service.py  views.py
serial_notifier/src/tests/: conftest.py
serial_notifier/src/tests/apps/auth/: test_views.py
serial_notifier/src/tests/apps/tv_show/: test_views.py
serial_notifier/src/tests/fixtures/: source_info.json
serial_notifier/src/tests/updater/: conftest.py  test_parsers.py  test_update_fetcher.py
serial_notifier/src/tests/updater/data/tv_show_pages/: filmix_flesh.html  filmix_locke_and_key.html  filmix_siren.html  filmix_the_walking_dead.html  seasonvar_amazing_stories.html  seasonvar_fringe.html  seasonvar_homeland.html
serial_notifier/src/tests/updater/notification/: test_telegram.py
serial_notifier/src/updater/: enums.py  parsers.py  update_fetcher.py
serial_notifier/src/updater/notification/: base.py  telegram.py
serial_notifier/src/utils/: load_dump.py  make_dump.py
services/tg_bot/: .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  base.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
services/tg_bot/bot/: config.py  exception.py  handler.py  schema.py  utils.py
services/tg_bot/serial_notifier_web/: schema.py
services/tg_bot/tests/bot/: test_handler.py  test_utils.py
tests/: conftest.py
tests/auth/: test_views.py
tests/common/: test_marshmallow.py
tests/common/rest_api/: test_error.py
tests/fixtures/: episode.json  source.json  telegram_acc.json  test_episode.json  test_user.json  tracked_tv_show.json  tv_show.json  user.json  user_episode.json
tests/mock/: middleware.py
tests/tv_show/: test_views.py
tests/updater/: conftest.py  test_parsers.py  test_update_fetcher.py
tests/updater/data/tv_show_pages/: fanserials_boruto.html  fanserials_see.html  fanserials_the_purge.html  fanserials_the_rookie_without_translate.html  filmix_star_trek_discovery.html  seasonvar_flesh.html
tests/updater/notification/: test_telegram.py
tests/utils/: db.py  logger.py  middleware.py
tg_bot/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
tg_bot/bot/: config.py  logger.py  schema.py  utils.py
tg_bot/serial_notifier_web/: api.py
tg_bot/tests/bot/: test_handler.py
tv_show/: routes.py  schemas.py  service.py  views.py
tv_show/business_logic/: tv_show.py
updater/: enumerations.py  parsers.py  update_fetcher.py
updater/notification/: base.py  telegram.py
utils/: load_dump.py  make_dump.py
