[tool.poetry]
name = "serial-notifier-web"
version = "0.1.0"
description = ""
authors = ["Aleksey Petrunnik <petrunnik.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = { version = "=3.6.2", extras = [ "speedups" ] }
sqlalchemy = "=1.3.15"
aiopg = "=1.0.0"
muffin-classy = { git = "https://github.com/ei-grad/muffin-classy.git" }
python-dotenv = "^0.12.0"
alembic = "=1.4.1"
psycopg2-binary = "=2.8.4"
aiohttp_jwt = "=0.5.0"
bcrypt = "=3.1.7"
marshmallow = "=3.5.1"
lxml = "=4.5.0"
cssselect = "^1.1.0"
apscheduler = "=3.6.3"

[tool.poetry.dev-dependencies]
pytest = "=5.4.1"
pytest-env = "=0.6.2"
pytest-aiohttp = "=0.3.0"
pytest-datadir = "=1.3.1"
aioresponses = "=0.6.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
