[tool.poetry]
name = "serial-notifier-web"
version = "0.1.0"
description = ""
authors = ["Aleksey Petrunnik <petrunnik.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "=0.62.0"
httptools = "^0.1.1"
uvicorn = "=0.12.3"
gunicorn = "=20.0.4"
uvloop = "=0.14.0"
sqlalchemy = "=1.3.20"
aiopg = "=1.0.0"
databases = { version = "=0.4.1" }
asyncom = "=0.3.1"
alembic = "=1.4.3"
aiohttp = { version = "=3.7.3", extras = [ "speedups" ] }
python-dotenv = "=0.12.0"
bcrypt = "=3.1.7"
python-jose = { version = "=3.2.0", extras = ["cryptography"] }
lxml = "=4.5.0"
cssselect = "=1.1.0"
apscheduler = "=3.6.3"
pyTelegramBotAPI = "=3.7.4"
structlog = "=20.1.0"
serial-notifier-schema = { path = "../libs/serial-notifier-schema/" }

[tool.poetry.dev-dependencies]
pytest = "=5.4.1"
pytest-env = "=0.6.2"
pytest-asyncio = "=0.14.0"
pytest-datadir = "=1.3.1"
aioresponses = "=0.7.1"
asynctest = "=0.13.0"
httpx = "=0.16.1"
black = "=20.8b1"
isort = "=5.7.0"
autoflake = "=1.4"
flake8 = "=3.8.4"
flake8-builtins = "=1.5.3"
flake8-import-order = "=0.18.1"

[tool.black]
target_version = ['py38']
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | alembic
  | conf_files
)/
'''

[tool.isort]
line_length = 120
multi_line_output = "3"
include_trailing_comma = "true"
skip_glob = '''
\(
    alembic
)/
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
