[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Aleksey Petrunnik <petrunnik.a@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "=3.7.6"
python-dotenv = "=0.15.0"
python-jose = { version = "=3.2.0", extras = ["cryptography"] }
pydantic = "=1.7.3"
structlog = "=20.1.0"
serial-notifier-api = { path = "../libs/serial-notifier-api/" }

[tool.poetry.dev-dependencies]
pytest = "=6.2.2"
pytest-env = "=0.6.2"
pytest-cov = "=2.11.1"
pytest-html = "=3.1.1"
black = "=20.8b1"
isort = "=5.7.0"
autoflake = "=1.4"
flake8 = "=3.8.4"
flake8-builtins = "=1.5.3"
flake8-import-order = "=0.18.1"

[tool.black]
target_version = ['py38']
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.idea
  | \.venv
  | __pycache__
)/
'''

[tool.isort]
line_length = 120
multi_line_output = "3"
include_trailing_comma = "true"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
